--- a/cex_inout_bot/cex_address_mapping.json
+++ b/cex_inout_bot/cex_address_mapping.json
@@ -20,5 +20,6 @@
   "EQB1cmpxb3R-YLA3HLDV01Rx6OHpMQA_7MOglhqL2CwJx_dz": "TON Rocket",
   "EQCtiv7PrMJImWiF2L5oJCgPnzp-VML2CAt5cbn1VsKAxLiE": "CryptoBot",
   "EQDd3NPNrWCvTA1pOJ9WetUdDCY_pJaNZVq0JMaara-TIp90": "Wallet Bot",
-  "EQBDanbCeUqI4_v-xrnAN0_I2wRvEIaLg1Qg2ZN5c6Zl1KOh": "Wallet Bot"
+  "EQBDanbCeUqI4_v-xrnAN0_I2wRvEIaLg1Qg2ZN5c6Zl1KOh": "Wallet Bot",
+  "EQCFr3jo0DXpIBF82mVGFc3zcdRkSAtinhENPFMQ2FqzYqDB": "Huobi Withdrawal"
 }
